# toyshelf

./: .gitignore  README.md  pyproject.toml
toyshelf/: __init__.py
toyshelf/modules/: shelf.py  shelves.py
