[tool.poetry]
name = "toyshelf"
version = "0.1.0"
description = "restful service to toy inventory google sheet"
authors = ["Richard Gregorio <thekrunchyfrog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
